--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^24.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
@@ -20,6 +21,7 @@
   "dependencies": {
     "@prisma/client": "^6.13.0",
     "@types/express": "^5.0.3",
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "prisma": "^6.13.0",
     "zod": "^4.0.14"
